Bases para el activity Play, se creo su activity para pantallas horizontales solo falta implementar funcionalidad en PlayActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">QuizzApp</string>
     <string name="btn_start">Jugar</string>
     <string name="btn_options">Opciones</string>
+    <string name="btn_next">Siguiente</string>
+    <string name="btn_prev">Anterior</string>
+    <string name="numQuestion">Pregunta 1/10</string>
 </resources>
