DIFICULTAD Y CANTIDAD DE HINTS SE PUEDE AJUSTAR YA, BUG LAS PREGUNTAS SE OCULTAN DEPENDIENDO DE LA DIFICULTAD PERO NO SALE LA CORRECTA A VECES

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,9 @@
         <item>DIFÍCIL</item>
     </string-array>
 
+    <string name="hints_available">Tienes %d pistas disponibles</string>
+
+    <string name="hints_assigned">Pistas asignadas: %d</string>
+    <string name="hints_count">Número de pistas: %d</string>
+
 </resources>
