--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,14 @@
     <string name="btn_prev">Anterior</string>
     <string name="numQuestion">Pregunta %1$d de %2$d</string>
     <string name="result_hint">🐰💡 %1$s</string>
+    <string name="num_hint">Hints💡: %1$s</string>
     <string name="result_ok">Respuesta correcta! :)</string>
     <string name="result_bad">Respuesta incorrecta! :(</string>
     <string name="hints_available">Tienes %d pistas disponibles</string>
     <string name="hints_assigned">Pistas asignadas: %d</string>
     <string name="hints_count">Número de pistas: %d</string>
+    <string name="correctAnswered_count">Preguntas correctas: %d</string>
+    <string name="wrongAnswered_count">Preguntas incorrectas: %d</string>
 
     <string-array name="Dificultades">
         <item>FÁCIL</item>
